Closed Bug 110114 Opened 24 years ago Closed 24 years ago

Mac nsSound uses wrong flags for nsICacheSession::CreateSession

Categories

(Core :: XUL, defect)

PowerPC
Mac System 9.x
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: sfraser_bugs, Assigned: sfraser_bugs)

Details

I have to fix this: Index: mozilla/widget/src/mac/nsSound.cpp =================================================================== RCS file: /cvsroot/mozilla/widget/src/mac/nsSound.cpp,v retrieving revision 1.21 diff -b -u -2 -r1.21 nsSound.cpp --- nsSound.cpp 2001/10/27 07:38:03 1.21 +++ nsSound.cpp 2001/11/14 19:59:13 @@ -331,6 +331,6 @@ return cacheService->CreateSession("sound", - nsICache::NOT_STREAM_BASED, - PR_FALSE, outCacheSession); + nsICache::STORE_IN_MEMORY, + nsICache::NOT_STREAM_BASED, outCacheSession); }
r/sr=darin
r=pavlov
Checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.