Fix the flags passed to nsICacheSession::CreateSession; bug 110114. r=pavlov, sr=darin.